plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

version = mod_version
group = maven_group

base {
    archivesName = "${mod_archive_name}-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.neoforged.net/releases' }
    maven { url = 'https://maven.parchmentmc.org' }
    maven { url = 'https://maven.theillusivec4.top/' }
    maven { url = 'https://maven.kosmx.dev/' }
    maven { url = 'https://maven.blamejared.com/' }
}

neoForge {
    version = project.neoforge_version

    parchment {
        minecraftVersion = project.parchment_minecraft_version
        mappingsVersion = project.parchment_mappings_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').absolutePath, '--existing', file('src/main/resources/').absolutePath
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation project(':library_of_exile')
    implementation project(':dungeon_realm')
    implementation project(':the_harvest')

    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"

    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    implementation "dev.kosmx.player-anim:player-animation-lib-forge:${player_animator_version}"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            mod_id                : mod_id,
            mod_version           : mod_version,
            mod_display_name      : mod_display_name,
            mod_website_link      : mod_website_link,
            mod_issues_link       : mod_issues_link,
            minecraft_version     : minecraft_version,
            neoforge_version      : neoforge_version,
            loader_version_range  : loader_version_range,
            exile_library_version : exile_library_version,
            dungeon_realm_version : dungeon_realm_version,
            the_harvest_version   : the_harvest_version
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/neoforge.mods.toml') {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Jar).configureEach {
    exclude 'net/neoforged/neoforge/**'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
